added background image

--- a/guessinggame.css
+++ b/guessinggame.css
@@ -1,7 +1,5 @@
-body{
-  background-color: #AAAAD6;
-  background-image: url('/Users/kelliefontes/Downloads/NH1nLsV.png');
-  text-align: center;
+body {
+  background: url('http://res.cloudinary.com/kfontes/image/upload/v1428702075/NH1nLsV_ctfghd.png');
 }
 
 header {
