making ghpages in sync with master

--- a/guessinggame.css
+++ b/guessinggame.css
@@ -83,5 +83,5 @@ label, #pastGuesses {
   background: #FF7E4B;
   border: 0.1em double;
   font-size: 1em;
-  margin-top: 0.5em;
+  margin: 0.5em;
 }
